--- a/src/app/componentes/componentes/componentes.component.html
+++ b/src/app/componentes/componentes/componentes.component.html
@@ -15,7 +15,7 @@
   <h3 id="introduccion">1. Introducción</h3>
   <hr>
 
-  <div class="pendiente mb-40">Poner una captura del decorador para cada uno de los tres casos</div>
+  <div class="pendiente mb-40">Poner una captura del decorador con el campo CSS con una ruta, vacío, con código CSS o eliminado (¿también para el HTML o se puede suponer?)</div>
   
   <ul>
     <li>Grosso modo, un componente es una clase asociada a un decorador que cumple un rol específico dentro de nuestra aplicación</li>
@@ -39,18 +39,87 @@
   <hr>
 
   <ul>
-    <li>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto voluptatibus accusamus adipisci quibusdam totam placeat esse molestiae mollitia iure consectetur iste, sunt similique debitis eveniet neque commodi nisi illo beatae.
-    </li>
+    <li>Para crear un componente, ejecutamos el comando <b>$ ng g c _Nombre del componente_</b></li>
+    <li>Esto creará el directorio del componente en cuestión dentro del directorio <i>app</i></li>
+    <li>No obstante, es una buena práctica crear todos los componentes dentro de un mismo directorio (por ejemplo, <i>components</i> o <i>componentes</i>) para separarlos de los demás tipos de elementos</li>
+    <li>Para ello, escribiemos el prefijo de ruta se escribe delante del nombre del componente, de la forma <b>$ ng g c componentes/_Nombre del componente_</b></li>
+    <li>Otra práctica muy común es meter dentro de un mismo directorio (por ejemplo, <i>shared</i> o <i>compartido</i>) todos aquellos componentes que vayan a aparecer en otros componentes, como sucede típicamente con el menú de navegación o el pie de página, entre otros</li>
+    <li>En estos casos, el comando resultante sería de la forma <b>$ ng g c componentes/compartido/_Nombre del componente_</b></li>
+    <li>Como vemos, no es necesario escribir la ruta completa, sino la ruta a partir del directorio <i>app</i></li>
+    <li>El directorio de un componente se compone de cuatro ficheros, a saber, un fichero HTML (estructura), un fichero CSS (estilos), un fichero <i>.ts</i> o TypeScript (funcionamiento) y un fichero <i>.spec.ts</i> (para pruebas)</li>
+    <li>De estos cuatro, solo el fichero TypeScript es indispensable, ya que podemos embeber el contenido de los ficheros HTML y CSS dentro del decorador del componente, por no mencionar que el fichero de pruebas carece de sentido si no tenemos pensado implementar ninguna prueba sobre el componente</li>
   </ul>
+
+  <h4>2.1 Crear componente sin fichero de pruebas</h4>
+
+  <ul>
+    <li>Una vez creado el componente podemos sin más eliminar el fichero de pruebas desde el editor de código</li>
+    <li>No obstante, si tenemos claro que no deseamos trabajar con ningún fichero de pruebas antes de crear un componente, se lo podemos indicar a Angular CLI para que este no lo cree a través de un flag</li>
+    <li>Ejecutamos el comando <b>$ ng g c _Nombre del componente_ --spec=false</b></li>
+  </ul>
+
+  <h4>2.2 Crear compnente sin fichero HTML</h4>
+
+  <ul>
+    <li>Si ya tenemos el componente creado, eliminamos el fichero HTML y el campo HTML del decorador (o cambiar el nombre del campo de <b>templateUrl: ['_Ruta del fichero HTML_']</b> a <b>template: []</b>)</li>
+    <li>En caso de omitirlo a la hora de crear el componente, habría que utilizar el flag <b>-it</b> (de <i>inline template</i>), dado que se nos da la posibilidad de escribir código HTML en línea dentro del campo HTML del decorador del componente</li>
+    <li>De esta forma, el comando queda tal que <b>$ ng g c _Nombre del componente_ -it</b></li>
+  </ul>
+
+  <h4>2.3 Crear componente sin fichero CSS</h4>
+
+  <div class="pendiente">Poner una captura del decorador sin hoja de estilos</div>
+  <div class="pendiente mb-40">Poner una captura del decorador con código CSS dentro del campo correspondiente</div>
+
+  <ul>
+    <li>Este caso no es tan directo como el anterior, dado que no basta con eliminar el fichero CSS</li>
+    <li>En tal caso, también habría que eliminar el campo CSS del decorador del componente o cambiar <b>styleUrls: ['_Ruta del fichero CSS_']</b> por <b>styles: []</b></li>
+    <li>Otra opción es ahorrarnos este procedimiento y omitir este fichero cuando creemos el componente mediante el flag <b>-is</b>, de <i>inline styles</i>, parecido a como hicimos antes</li>
+    <li>Claro, y es que para el campo CSS del decorador del componente no constará la ruta del fichero CSS, sino la posibilidad de escribir directamente código CSS a modo de literal para dicho campo</li>
+    <li>De ahí el nombre del flag, ya que estamos escribiendo estilos en línea, similar a como se hacía en HTML plano</li>
+    <li>De esta forma, el comando queda tal que <b>$ ng g c _Nombre del componente_ -is</b></li>
+  </ul>
+
+  <h4>2.4 Crear componente sin directorio</h4>
+
+  <ul>
+    <li>Acabamos de ver que un componente se compone típicamente de cuatro ficheros y que estos se almacenan en un directorio, pero esto no tiene por qué ser así</li>
+    <li>Es posible crear estos ficheros sin directorio padre utilizando un flag en el momento de su creación, sin más (normalmente no se considera una buena práctica)</li>
+    <li>Para ello, ejecutamos el comando <b>$ ng g c _Nombre del componente_ --flat</b></li>
+  </ul>
+
+  <h4>2.5 Omitir más de un fichero al crear un componente</h4>
+
+  <ul>
+    <li>Podemos combinar varios flags que acabamos de ver en un mismo comando sin ningún problema (incluso podemos utilizarlos todos)</li>
+    <li>Por ejemplo, el comando <b>$ ng g c _Nombre del componente_ -is --spec=false</b> creará un componente de solo dos ficheros: el fichero HTML y el fichero TypeScript, dado que los otros dos los hemos obviado</li>
+  </ul>
+
+  <h4>2.6 Actualizar el fichero <i>app.module.ts</i></h4>
+
+  <div class="pendiente mb-40">Poner una captura de Angular CLI en la consola indicando la actualización del módulo principal tras crear un componente</div>
+
+  <ul>
+    <li>Tras crear un componente el fichero <i>app.module.ts</i> debiera actualizarse automáticamente (Angular CLI nos lo indica en la consola tras crear un componente mediante una instrucción UPDATE, como se ve en la figura X)</li>
+    <li>No obstante, si esto no llegara a ocurrir, conviene saber cómo actualizarlo por nosotros mismos (creo que en versiones antiguas de Angular se tenía que realizar la actualización a mano)</li>
+    <li>Para ello, tenemos que importar el componente y escribir el nombre de su clase dentro del campo <b>declarations</b> del decorador (figura X)</li>
+    <li>Ojo, este fichero debe actualizarse para dejar constancia de la existencia del nuevo componenete para que este pueda ser utilizado dentro de nuestra aplicación (esa es la principal función de los módulos)</li>
+    <li>Otro detalle a tener en cuenta es verificar que la palabra reservada <b>export</b> se encuentre delante del nombre de clase de nuestro componente, justo delante de la palabra reservada <b>class</b></li>
+  </ul>
+
+  <!-- <img src="assets/img/rutas/figuraX.png" alt=""> -->
+  <!-- <caption><strong>Figura X.</strong> Historial de operaciones del Angular CLI tras crear el componente X</caption> -->
+
+  <!-- <img src="assets/img/rutas/figuraX.png" alt=""> -->
+  <!-- <caption><strong>Figura X.</strong> Cambios sufridos en el fichero <i>app.module.ts</i> tras crear el componente X</caption> -->
 
   <h3 id="eliminar-componente">3. Eliminar componente</h3>
   <hr>
 
   <ul>
-    <li>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto voluptatibus accusamus adipisci quibusdam totam placeat esse molestiae mollitia iure consectetur iste, sunt similique debitis eveniet neque commodi nisi illo beatae.
-    </li>
+    <li>Para eliminar un componente debemos eliminar su directorio, así como todos los ficheros que pudiera contener</li>
+    <li>Tras esto, actualizamos el fichero <i>app.module.ts</i>, eliminando la instrucción <b>import</b> asociada, así como el nombre de clase del componente del campo <b>declarations</b> del decorador</li>
+    <li>Finalmente, actualizamos el fichero <i>app.routes.ts</i>, eliminando la instrucción <b>import</b> asociada, así como el mapping entre la ruta y el componente, en caso de existir, dentro de la constante <b>APP_ROUTES</b></li>
   </ul>
 
   <h3 id="editar-componente">4. Editar componente</h3>
