--- a/src/styles.scss
+++ b/src/styles.scss
@@ -175,3 +175,54 @@ hr {
         }
     }
 }
+
+// ────────────────── //
+//     TOP BUTTON     //
+// ────────────────── //
+
+.top-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $primary !important;
+    font-size: 25px;
+    text-decoration: none !important;
+    background: $primary;
+    border: 1px solid $primary;
+    border-radius: 2px;
+    box-shadow: none;
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    z-index: 150;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+    transition: .25s ease-in-out;
+    cursor: pointer;
+
+    .flecha {
+        color: white;
+    }
+
+    &:visited {
+        background: $primary;
+    }
+
+    &:hover {
+        background: white;
+
+        .flecha {
+            color: $primary;
+        }
+    }
+    
+    &:active {
+        background: white;
+
+        .flecha {
+            color: $primary;
+        }
+    }
+}
