--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -7,12 +7,23 @@ $text        : rgb(50,50,50);
 $primary     : rgb(50,55,65);
 $lightprimary: rgba(50,55,65,.25);
 
+.burger-button {
+    background: red;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 200;
+    width: 50px;
+    height: 50px;
+}
+
 #sidebar {
     display: none;
     background: $primary;
     position: fixed;
     top: 0;
     left: 0;
+    overflow: auto;
 
     .sidebar-content {
         padding-top: 150px;
