--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,97 +1,128 @@
 <div id="sidebar">
-  <div class="sidebar-content">
-    <img class="logo" src="assets/logo1.svg" alt="">
-    <ul class="items">
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="inicio" routerLink="inicio">      
-          <i class="icono fa fa-fw fa-home" aria-hidden="true"></i>
+  <img class="logo" src="assets/logo1.svg" alt="">
+  <ul class="items">
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="inicio">
+        <i class="icono fa fa-fw fa-home" aria-hidden="true"></i>
+        <span class="texto">
           Inicio
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="ficheros" routerLink="ficheros">      
-          <i class="icono fa fa-fw fa-folder" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="ficheros">
+        <i class="icono fa fa-fw fa-folder" aria-hidden="true"></i>
+        <span class="texto">
           Ficheros
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="typescript" routerLink="typescript">      
-          <i class="icono fa fa-fw fa-gear" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="typescript">
+        <i class="icono fa fa-fw fa-gear" aria-hidden="true"></i>
+        <span class="texto">
           TypeScript
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="componentes" routerLink="componentes">      
-          <i class="icono fa fa-fw fa-puzzle-piece" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="componentes">
+        <i class="icono fa fa-fw fa-puzzle-piece" aria-hidden="true"></i>
+        <span class="texto">
           Componentes
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="servicios" routerLink="servicios">      
-          <i class="icono fa fa-fw fa-paper-plane" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="servicios">
+        <i class="icono fa fa-fw fa-paper-plane" aria-hidden="true"></i>
+        <span class="texto">
           Servicios
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('directivas')">
-        <a id="directivas" routerLink="ngstyle">
-          <i class="icono fa fa-fw fa-lightbulb-o" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="directivas">
+        <i class="icono fa fa-fw fa-lightbulb-o" aria-hidden="true"></i>
+        <span class="texto">
           Directivas
-          <i class="caret fa fa-fw fa-angle-right"></i>
-        </a>
-        <!-- <ul class="submenu" *ngIf="abrirDirectivas">
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-        </ul> -->
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="pipes" routerLink="pipes">
-          <i class="icono fa fa-fw fa-wrench" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="pipes">
+        <i class="icono fa fa-fw fa-wrench" aria-hidden="true"></i>
+        <span class="texto">
           Pipes
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('rutas')">
-        <a id="rutas" routerLink="rutas">
-          <i class="icono fa fa-fw fa-link" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="rutas">
+        <i class="icono fa fa-fw fa-link" aria-hidden="true"></i>
+        <span class="texto">
           Rutas
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="ciclos" routerLink="ciclos-de-vida">
-          <i class="icono fa fa-fw fa-leaf" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="ciclos-de-vida">
+        <i class="icono fa fa-fw fa-leaf" aria-hidden="true"></i>
+        <span class="texto">
           Ciclos de vida
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="auth" routerLink="auth">
-          <i class="icono fa fa-fw fa-lock" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="auth">
+        <i class="icono fa fa-fw fa-lock" aria-hidden="true"></i>
+        <span class="texto">
           Login y registro
-          <i class="caret fa fa-fw fa-angle-right"></i>
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="despliegue" routerLink="despliegue">
-          <i class="icono fa fa-fw fa-star-o" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="despliegue">
+        <i class="icono fa fa-fw fa-star-o" aria-hidden="true"></i>
+        <span class="texto">
           Despliegue
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-        <a id="depuracion" routerLink="depuracion">
-          <i class="icono fa fa-fw fa-search" aria-hidden="true"></i>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="depuracion">
+        <i class="icono fa fa-fw fa-search" aria-hidden="true"></i>
+        <span class="texto">
           Depuración
-        </a>
-      </li>
-      <li class="item" routerLinkActive="active" (click)="abrirSubmenu('')">
-          <a id="aplicaciones" routerLink="aplicaciones">
-            <i class="icono fa fa-fw fa-coffee" aria-hidden="true"></i>
-            Aplicaciones
-            <i class="caret fa fa-fw fa-angle-right"></i>
-          </a>
-        </li>
-    </ul>
-  </div>
-</div>
-<div class="burger-button">
-  <span></span>
-  <span></span>
+        </span>
+      </a>
+    </li>
+
+    <li class="item" routerLinkActive="active">
+      <a class="enlace" routerLink="aplicaciones">
+        <i class="icono fa fa-fw fa-coffee" aria-hidden="true"></i>
+        <span class="texto">
+          Aplicaciones
+        </span>
+        <i class="caret fa fa-fw fa-angle-right"></i>
+        <!-- <ul class="submenu" *ngIf="submenuAbierto">
+          <li>Buscador</a>
+          <li>SpotiApp</a>
+          <li>...</a>
+        </ul> -->
+      </a>
+    </li>
+  </ul>
 </div>
