[ Componente 'rutas' ] » Uso del componente 'indice'. jQuery eliminado

--- a/src/app/componentes/rutas/rutas.component.html
+++ b/src/app/componentes/rutas/rutas.component.html
@@ -4,19 +4,7 @@
 
   <div class="pendiente mb-40">Rutas absolutas y rutas relativas en el atributo <b>routerLink</b></div>
 
-  <span class="indice">
-    <a href="#fichero-rutas">Fichero de rutas</a>
-    <a href="#modulo-principal">Módulo principal</a>
-    <a href="#router-outlet">Selector <b>&lt;router-outlet&gt;</b></a>
-    <a href="#routerlink">Atributo <b>routerLink</b></a>
-    <a href="#routerlinkactive">Atributo <b>routerLinkActive</b></a>
-    <a href="#enviar-parametros">Enviar de parámetros a través de la URL</a>
-    <a href="#recibir-parametros">Recibir parámetros a través de la URL</a>
-    <a href="#rutas-hijas">Rutas hijas</a>
-    <a href="#obtener-parametros-padre">Obtener parámetros del padre desde una ruta hija</a>
-    <a href="#dividir-fichero-rutas">Dividir el fichero de rutas en varios ficheros de rutas</a>
-    <a href="#manejo-rutas">Manejo de rutas en Angular</a>
-  </span>
+  <app-indice [items]="itemsIndice"></app-indice>
 
   <h3 id="fichero-rutas">1. Fichero de rutas</h3>
   <hr>
