[ Componente 'menu' ] » Cambio de icono

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -94,7 +94,7 @@
 
     <li class="item" routerLinkActive="active">
       <a class="enlace" routerLink="despliegue">
-        <i class="icono fa fa-fw fa-star-o" aria-hidden="true"></i>
+        <i class="icono fa fa-fw fa-star" aria-hidden="true"></i>
         <span class="texto">
           Despliegue
         </span>
