[ Componente 'componentes' ] » Uso del componente 'indice'

--- a/src/app/componentes/componentes/componentes.component.html
+++ b/src/app/componentes/componentes/componentes.component.html
@@ -2,15 +2,7 @@
 
   <h2>Componentes</h2>
 
-  <span class="indice">
-    <a href="#introduccion">Introducción</a>
-    <a href="#crear-componente">Crear componente</a>
-    <a href="#eliminar-componente">Eliminar componente</a>
-    <a href="#editar-componente">Editar componente</a>
-    <a href="#renderizar-componente">Renderizar componente</a>
-    <a href="#enviar-hijo">Enviar parámetros desde un componente padre a un componente hijo</a>
-    <a href="#enviar-padre">Enviar parámetros desde un componente hijo a un componente padre</a>
-  </span>
+  <app-indice [items]="itemsIndice"></app-indice>
   
   <h3 id="introduccion">1. Introducción</h3>
   <hr>
